--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,16 @@
 			<artifactId>hutool-all</artifactId>
 			<version>4.6.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>1.5.22</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -265,7 +275,41 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId> org.mybatis.generator</groupId>
+				<artifactId> mybatis-generator-maven-plugin</artifactId>
+				<version> 1.3.2</version>
+				<!-- <executions> <execution> <id>Generate MyBatis Artifacts</id> <goals>
+					<goal>generate</goal> </goals> </execution> </executions> -->
+				<configuration>
+					<verbose> true</verbose>
+					<overwrite> true</overwrite>
+					<!-- <jdbcDriver>com.mysql.jdbc.Driver</jdbcDriver> -->
+					<!-- <jdbcURL>jdbc:mysql://127.0.0.1:3306/test</jdbcURL> -->
+					<!-- <jdbcUserId>test</jdbcUserId> -->
+					<!-- <jdbcPassword>test</jdbcPassword> -->
+					<!-- <dao.target.dir>src/main/java</dao.target.dir> -->
+					<!-- 指定generator配置位置:默认/ src/main/resources/generatorConfig.xml -->
+					<configurationFile> src/main/resources/generatorConfigMyBatis3.xml</configurationFile>
+					<!-- maven 执行输出的路径 -->
+					<!-- <outputDirectory>src/main/java/target</outputDirectory> -->
+				</configuration>
+				<dependencies>
+					<!-- 数据库逆向工程的环境依赖配置：与代码依赖区分 -->
+					<dependency>
+						<groupId> org.mybatis.generator</groupId>
+						<artifactId> mybatis-generator-core </artifactId>
+						<version> 1.3.2</version>
+					</dependency>
+					<dependency>
+						<groupId> mysql</groupId>
+						<artifactId> mysql-connector-java </artifactId>
+						<version> ${mysql.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
+
 	</build>
 
 </project>
