--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# jdbc驱动
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver 5.x
+spring.datasource.url=jdbc:mysql://47.244.252.165:3306/talentfootpoint?useSSL=false&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8\
+  &allowPublicKeyRetrieval=true
+# spring.datasource.url=jdbc:mysql://localhost:3306/easyrepair
+spring.datasource.username=root
+spring.datasource.password=root
+#
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=10MB
+spring.mvc.static-path-pattern=/image/**
+spring.resources.static-locations=file:E://image/
+
+server.port=9092
+#对于rabbitMQ的支持
+spring.rabbitmq.host=139.196.94.99
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.rabbitmq.virtual-host=my_vhost
 
